# SimpleGame

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.0EE881ED0243F4E5.idx
src/: boundaries.cpp  boundaries.hpp  main.cpp
